devops/bootstrap_kind_cluster/argocd/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
spec:
  tls:
  - hosts:
    - argocd.codepraxis.dev
    secretName: argocd-cert-route53-tls
  rules:
    - host: argocd.codepraxis.dev
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: argocd-server
              port:
                number: 80
